Diffuse lighting pt 2

--- a/Project1/Project1.vcxproj.filters
+++ b/Project1/Project1.vcxproj.filters
@@ -34,9 +34,9 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <None Include="fragmentshader.frag" />
+    <Text Include="vertexshader.vsh" />
   </ItemGroup>
   <ItemGroup>
-    <Text Include="vertexshader.vert" />
+    <None Include="fragmentshader.fsh" />
   </ItemGroup>
 </Project>
