--- a/Project1/Project1.vcxproj
+++ b/Project1/Project1.vcxproj
@@ -131,10 +131,12 @@
     <ClCompile Include="glsl.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="objloader.cpp" />
+    <ClCompile Include="texture.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="glsl.h" />
     <ClInclude Include="objloader.h" />
+    <ClInclude Include="texture.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="vertexshader.vsh">
